# CPPproj

./: .gitignore
Binarytree/: Binarytree.sln  Binarytree.vcxproj  Binarytree.vcxproj.filters
Catiablo/: CMakeLists.txt  CMakePresets.json  README.md
Catiablo/doc/: Что нужно сделать.drawio
Catiablo/inc/: Game.h  Map.h  Menu.h  Monster.h  Player.h
Catiablo/src/: Game.cpp  Map.cpp  Menu.cpp  Monster.cpp  Player.cpp  main.cpp
DynamicStack/: DynamicStack.sln  DynamicStack.vcxproj  DynamicStack.vcxproj.filters  Node.cpp  Stack.cpp  Stack.h  main.cpp
LabsFor3Variant/: LabsFor3Variant.sln  LabsFor3Variant.vcxproj  LabsFor3Variant.vcxproj.filters  lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  lab9_1.cpp
LabsFor3Variant/lab1/: lab1.cpp
LabsFor3Variant/lab6/: Parallelepiped.cpp  Parallelepiped.h  Point.cpp  Point.h  Quadrilateral.cpp  Quadrilateral.h  lab6.cpp
LabsFor3Variant/lab8/: FileWriteException.h  lab8.cpp
MathematicalSet/: MathematicalSet.cpp  MathematicalSet.h  MathematicalSet.sln  MathematicalSet.vcxproj  MathematicalSet.vcxproj.filters  README.md  main.cpp  с++ dz.txt
QtProj/mapAnalizer/: map_analizer.rar
QtProj/mapAnalizer/map_analizer/: Project_CAM.map  defines.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map_analizer.pro  memoryinfo.cpp  memoryinfo.h  memoryparser.cpp  memoryparser.h
QtProj/mapAnalizer/untitled2/: Project_CAM.txt  untitled2.pro
QtProj/projQtCpp/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  timerprototipe.cpp  timerprototipe.h  udphandler.cpp  udphandler.h
SfmlLearnCmake/: .$Game plan.drawio.dtmp  CMakeLists.txt  Game plan.drawio  README.md
SfmlLearnCmake/include/: Bullet.h  BulletFactory.h  Enemy.h  Entity.h  Fireball.h  Game.h  Level.h  MenuState.h  Player.h  ResourceManager.h  Utils.h
SfmlLearnCmake/src/: BulletFactory.cpp  Enemy.cpp  Entity.cpp  Fireball.cpp  Level.cpp  MenuState.cpp  Player.cpp  ResourceManager.cpp  game.cpp  game.h  main.cpp
Var/: Var.sln
Var/Var/: String.cpp  String.h  Var.cpp  Var.h  Var.vcxproj  Var.vcxproj.filters  main.cpp
elevator/: CMakeLists.txt  README.md  elevator.h  elevatorbuilder.h  main.cpp  passengerrequest.h
game_test/workspace/app/: CMakeLists.txt  app.cpp
learn/step1/: test.txt
sfmlSnake/: CMakeLists.txt  main.cpp  sfmlSnake.cpp  sfmlSnake.h  snake.cpp  snake.h  word.cpp  word.h
